# pacman-i18n-ko-kp

./: .gitignore  PKGBUILD  README.md  meson.build
.github/workflows/: check-upstream.yml  release.yml  translation-progress.yml  validate.yml
po/: libalpm.ko_KP.po  pacman-scripts.ko_KP.po  pacman.ko_KP.po
scripts/: translation-stats.sh  update-translations.sh
